# Web-Scraping-Consulta-Amigable-MEF

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
01_data/01_raw/: EJECUCION_GASTO_GN_X_SECTORES.xlsx  EJECUCION_GASTO_MUNICI.xlsx  datos_municipalidades.xlsx
01_data/02_processed/: EJECUCION_GASTO_MUNICI_procesado.xlsx
02_src/: a_config.py  b_scraper.py  c_cleaner.py  d_analysis.ipynb  z_test.py
02_src/.ipynb_checkpoints/: d_analysis-checkpoint.ipynb
02_src_playwright/: a_config.py  b_scraper.py  x_mock.py  z_webscraping_mef.py
Consulta_amigable.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/01_raw/: EJECUCION_GASTO_GL_X_MUNICIPALIDADES_2024-2025.xlsx
data/02_processed/: PROCESADO_EJECUCION_GASTO_GL_X_MUNICIPALIDADES _2024-2025.xlsx
scripts/: municipalidades.py
src/consulta_amigable/: __init__.py  a_config.py  b_scraper.py  c_cleaner.py  d_cli.py  d_logger.py  e_cli.py  e_export_yaml.py  export_yaml.py  g_locators.py
src/consulta_amigable.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src_playwright/: __init__.py  a_config.py  b_scraper.py  c_cleaner.py
tests/: test_crear_ruta.py  test_navegar_ruta.py
tests/productos/: salud.xlsx
tests/yamls/: municipalidades.yaml  salud.yaml
visualization/: d_analysis.ipynb
