[project]
name = "consulta_amigable"
version = "0.1.2"
description = "Web scraping del SIAF-Consulta Amigable con opción interactiva para crear rutas"
readme = "README.md"
requires-python = ">=3.10" # Por los type hints

dependencies = [
    "tqdm",
    "pandas",
    "playwright",
    "pydantic",
    "PyYAML",
    "questionary",
    "rich",
    "ubigeos_peru==0.1.0"
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.1.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]